tests/errors/lifetime/loan/drop_deref_does_not_release_loan.sim

        extern fn sink(r: &mut i64);
        fn f(x: i64) {
          r: &mut i64;
          entry:
            r = &mut x;
            drop r.*;
            x = 42;
            call sink(move r);
            return
        }
        